# streamflow

./: Cargo.toml  Makefile  NOTES.md  README.md
.cargo/: config
src/: lib.rs  main-old.rs  main.rs  prototype.rs  stream.rs
src/data/: mod.rs
src/data/consumer/: mod.rs
src/data/dispatcher/: mod.rs
src/data/partitioner/: mod.rs
src/data/producer/: mod.rs
src/data/reducer/: mod.rs  stats.rs
src/data/source/: mod.rs
src/data/source/file/: csv.rs  mod.rs
src/data/transform/: mod.rs
src/options/: channel.rs  csv.rs  mod.rs
src/profiler/: mod.rs  profile_object.rs
src/profiler/traits/: end_of_scope.rs  mod.rs
src/types/: formatter.rs  mod.rs
