[package]
name = "streamflow"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]
build = "src/build.rs"

[dependencies]
clap = ">= 2.18"
crossbeam = "0.2.10"
csv = "0.15.0"
env_logger = ">= 0.4"
libc = ">= 0.2.16"
log = ">= 0.3.6"
mio = "0.6"
mioco = "0.8.1"
ocl = "0.13"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.2"
thread_local = "0.3"
time = "0.1.37"
xsv = "0.11.0"

[lib]
name = "streamflow"
path = "src/lib.rs"

[[bin]]
name = "streamflow"
doc = false
path = "src/main.rs"

# Debug settings
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

# Release settings
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
