[package]
name = "streamflow"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]
build = "src/build.rs"

[dependencies]
bytes = "0.4"
clap = ">= 2.18"
crossbeam = "0.2.10"
csv = "0.15.0"
env_logger = ">= 0.4"
futures = "0.1"
futures-cpupool = "0.1"
libc = ">= 0.2.16"
log = ">= 0.3.6"
mio = "0.6"
mioco = "0.8.1"
ocl = "0.13"
quick-csv = "0.1"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.2"
thread_local = "0.3"
time = "0.1.37"
tokio-core = "0.1"
tokio-file-unix = "0.3"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
xsv = "0.11.0"

[lib]
name = "streamflow"
path = "src/lib.rs"

[[bin]]
name = "prototype"
doc = false
path = "src/prototype.rs"

[[bin]]
name = "streamflow"
doc = false
path = "src/main.rs"

[[bin]]
name = "stream"
doc = false
path = "src/stream.rs"

# Debug settings
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

# Release settings
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'unwind'
